--- a/packages/desktop-app/src/app/components/sync-pro-widget/sync-pro-widget.component.html
+++ b/packages/desktop-app/src/app/components/sync-pro-widget/sync-pro-widget.component.html
@@ -4,7 +4,10 @@
     <span><img src="assets/images/unsync.svg" alt="" title=""> Not active</span>
     <button class="btn btn-primary" (click)="goToUpgrade();" *ngIf="!canRemoveButton">UPGRADE TO PRO</button>
   </span>
-  <span *ngIf="isLoggedAsPro && isFailed" class="sync-failed"><span><img src="assets/images/syncfailed.svg" alt="" title=""> An issue in syncing Workspace...</span></span>
+  <span *ngIf="isLoggedAsPro && isFailed" class="sync-failed">
+    <span><img src="assets/images/syncfailed.svg" alt="" title=""> An issue in syncing Workspace...</span>
+    <button class="btn btn-primary" (click)="retrySync();">Retry</button>
+  </span>
   <span *ngIf="isLoggedAsPro && isProgress" class="sync-progress"><span><img src="assets/images/syncprogress.svg" alt=""
                                                                              title=""> Syncing Workspace...</span></span>
   <span *ngIf="isLoggedAsPro && !isProgress && !isFailed" class="sync"><span><img src="assets/images/sync.svg" alt=""
