--- a/packages/desktop-app/src/app/components/sync-pro-widget/sync-pro-widget.component.html
+++ b/packages/desktop-app/src/app/components/sync-pro-widget/sync-pro-widget.component.html
@@ -2,7 +2,9 @@
 <section>
   <span *ngIf="!isLoggedAsPro" class="unsync">
     <span><img src="assets/images/unsync.svg" alt="" title=""> Not active</span>
-    <button class="btn btn-primary" (click)="goToUpgrade();" *ngIf="!canRemoveButton">UPGRADE TO PRO</button>
+    <button class="btn btn-primary" (click)="callToAction();">
+      {{buttonText}}
+    </button>
   </span>
   <span *ngIf="isLoggedAsPro && isFailed" class="sync-failed">
     <div class="floating-message">
