chore: added link for business contact

--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
@@ -448,7 +448,7 @@
               <div class="price-container">
                 <span class="price-value">Custom princing</span>
               </div>
-              <div class="cta-button clickable">CONTACT SALES</div>
+              <div class="cta-button clickable" (click)="contactSales();">CONTACT SALES</div>
               <ul class="plan-features">
                 <li>
                   <span class="check-mark-icon"><app-check-icon-svg [color]="'#292929'"></app-check-icon-svg></span>
