chore: fixed typo

--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
@@ -446,7 +446,7 @@
             </div>
             <div class="plan-body">
               <div class="price-container">
-                <span class="price-value">Custom princing</span>
+                <span class="price-value">Custom pricing</span>
               </div>
               <div class="cta-button clickable" (click)="contactSales();">CONTACT SALES</div>
               <ul class="plan-features">
