chore: fixed discount and text align

--- a/packages/desktop-app/src/app/components/dialogs/leapp-pro-pre-checkout-dialog/leapp-pro-pre-checkout-dialog.component.scss
+++ b/packages/desktop-app/src/app/components/dialogs/leapp-pro-pre-checkout-dialog/leapp-pro-pre-checkout-dialog.component.scss
@@ -111,7 +111,7 @@
   small {
     color: #8fc92a;
     position: relative;
-    top: 2px;
+    top: 0;
     margin-left: 5px;
     font-size: 12px;
   }
