--- a/packages/desktop-app/src/app/components/lock-page/lock-page.component.html
+++ b/packages/desktop-app/src/app/components/lock-page/lock-page.component.html
@@ -27,9 +27,12 @@
           </div>
         </fieldset>
       </form>
-      <div class="touch-id" (click)="!submitting ? launchTouchId() : ''" [ngClass]="submitting ? 'disabled' : ''">
+      <div *ngIf="appService.isTouchIdAvailable()" class="touch-id" (click)="!submitting ? launchTouchId() : ''" [ngClass]="submitting ? 'disabled' : ''">
         <div *ngIf="submitting" class="sign-in-loader"><i class="fa fa-spinner fa-spin"></i></div>
         <img *ngIf="!submitting" src="assets/images/fingerprint.png" alt="">
+      </div>
+      <div *ngIf="!appService.isTouchIdAvailable()">
+        <div *ngIf="submitting" class="sign-in-loader-no-touch-id"><i class="fa fa-spinner fa-spin"></i></div>
       </div>
     </div>
   </div>
@@ -42,6 +45,5 @@
     <p><span>Sign out definitively from this device and </span><span class="link-to-local" (click)="switchToLocalWorkspace();">start with a local workspace</span></p>
   </div>
 </div>
-
 
 <div class="submitting-overlay" *ngIf="submitting"></div>
