chore: added requirePassword to globalSettings

--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
@@ -19,7 +19,7 @@
           <div class="form-group">
             <div class="form-field">
               <label>Require password</label>
-              <ng-select formControlName="requirePasswordSelect" bindLabel="require-password" bindValue="require-password" [clearable]="false"
+              <ng-select formControlName="requirePasswordSelect" bindLabel="key" bindValue="value" [clearable]="false"
                          [items]="[
                            eConstants.requirePasswordEveryWeek,
                            eConstants.requirePasswordEveryTwoWeeks,
