--- a/packages/desktop-app/src/app/components/lock-page/lock-page.component.html
+++ b/packages/desktop-app/src/app/components/lock-page/lock-page.component.html
@@ -27,13 +27,13 @@
           </div>
         </fieldset>
       </form>
-      <div *ngIf="appService.isTouchIdAvailable()" class="touch-id" (click)="!submitting ? launchTouchId() : ''" [ngClass]="submitting ? 'disabled' : ''">
+      <div *ngIf="this.showTouchId; else disabledTouchIdButton" class="touch-id" (click)="!submitting ? launchTouchId() : ''" [ngClass]="submitting ? 'disabled' : ''">
         <div *ngIf="submitting" class="sign-in-loader"><i class="fa fa-spinner fa-spin"></i></div>
         <img *ngIf="!submitting" src="assets/images/fingerprint.png" alt="">
       </div>
-      <div *ngIf="!appService.isTouchIdAvailable()">
+      <ng-template #disabledTouchIdButton>
         <div *ngIf="submitting" class="sign-in-loader-no-touch-id"><i class="fa fa-spinner fa-spin"></i></div>
-      </div>
+      </ng-template>
     </div>
   </div>
 
